--- a/web/package.json
+++ b/web/package.json
@@ -9,17 +9,18 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "lucide-react": "^0.451.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "seedrandom": "^3.0.5",
-    "lucide-react": "^0.451.0"
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/seedrandom": "^3.0.8",
     "@vitejs/plugin-react": "^4.2.0",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.0",
-    "tsx": "^4.7.0"
+    "vite": "^5.0.0"
   }
 }
